--- a/src/controllers/livetv.html
+++ b/src/controllers/livetv.html
@@ -64,6 +64,9 @@
                 <div class="btnFilter-wrapper">
                     <button is="paper-icon-button-light" class="btnFilter sectionTitleButton" title="${Filter}"><span class="material-icons filter_list" aria-hidden="true"></span></button>
                 </div>
+                <div class="btnToggleGroups-wrapper">
+                    <button is="paper-icon-button-light" class="btnToggleGroups sectionTitleButton" title="${ToggleChannelGroups}"><span class="material-icons view_list" aria-hidden="true"></span></button>
+                </div>
             </div>
             <div is="emby-itemscontainer" id="items" class="itemsContainer vertical-wrap padded-left padded-right"></div>
             <div class="flex align-items-center justify-content-center flex-wrap-wrap padded-top padded-left padded-right padded-bottom focuscontainer-x">
